--- a/job_config.yaml
+++ b/job_config.yaml
@@ -1,24 +1,51 @@
+## aisv2_job 运行配置（只负责“跑实验 + 出 summaries + 聚合画图”）
 job:
+  # ideas 文件路径（JSON 数组），从中选择一个 idea 运行
   load_ideas: ./ai_scientist/ideas/smoke_toy_regression.json
+  # 选择第几个 idea（从 0 开始）
   idea_idx: 0
+  # attempt 编号（会写入输出目录名，便于区分多次尝试）
   attempt_id: 0
+  # 是否从同名 .py 里加载 Code 作为上下文（默认 false）
   load_code: false
+  # 是否把本地 hf_dataset_reference.py 拼接进 Code（默认 false）
   add_dataset_ref: false
+  # BFTS 主配置文件路径（会复制到每次运行的 idea_dir/bfts_config.yaml 并写入 desc_file/workspace_dir 等）
   bfts_config: ./bfts_config.yaml
-  model_agg_plots: o3-mini-2025-01-31
+  # 聚合画图（aggregate_plots）阶段使用的 LLM（用于生成 auto_plot_aggregator.py 并产出 figures/）
+  model_agg_plots: qwen-plus
+  # -------- 聚合画图控制（最终论文 figures/）--------
+  # 反思/修正轮数：每一轮都会“运行脚本 -> 看输出/图数量 -> 让 LLM 修正脚本”
+  plot_agg_reflections: 5
+  # 目标图数量上限（不要超过这个值；越大越容易产出冗余/重复图）
+  plot_agg_max_figures: 12
+  # 聚合画图 LLM 的最大输出 token（过小会导致 auto_plot_aggregator.py 被截断 -> SyntaxError）
+  # 设为 null 表示交给 provider 默认值决定
+  plot_agg_max_tokens: 9999999999999
+  # 是否保留顶层 experiment_results/（保留后，后续单独重跑 perform_plotting 不会因为找不到 .npy 而画“空图”）
+  keep_experiment_results: true
+  # 输出根目录（会在其下创建 runs/experiments/<timestamp>_<IdeaName>_attempt_<id>/）
   out_root: ./runs
+  # 可选：固定 run_id（不填则用当前时间戳），用于复现/对齐多次运行的输出目录
   run_id: null
+  # 严格产物校验：summaries 或 figures 缺失时让任务直接失败
   strict_artifacts: false
 
+## 环境变量清单（用于 OpenAI-Compatible 路由）
 env:
   required:
+    # 默认 provider 的 API Key（必填）
     - OPENAI_API_KEY
   optional:
+    # 默认 provider 的 base_url（可选）
     - OPENAI_BASE_URL
+    # 自定义 provider（形如 <provider>::<model_id>）的 API Key / base_url
     - OAIC_PROVIDER_API_KEY
     - OAIC_PROVIDER_BASE_URL
+    # 可选开关：禁用 tools / 禁用 vision / 打印调试信息
     - OAIC_DISABLE_TOOLS
     - OAIC_DISABLE_VISION
     - OAIC_DEBUG
+    # Ollama 的 base_url / API Key（可选）
     - OAIC_OLLAMA_BASE_URL
     - OAIC_OLLAMA_API_KEY
