Add local novelty check

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,13 @@ I2P_CRITIC_JSON_RETRIES=2
 # I2P_GRID_STEP=0.01
 # I2P_DENSIFY_LOSS_THRESHOLD=0.03
 # I2P_DENSIFY_MIN_AVG_CONF=0.45
+
+# -----------------------------
+# Local novelty check (A方案)
+# -----------------------------
+# Enable local novelty check against nodes_paper.json
+I2P_NOVELTY_ENABLE=1
+# Action on high similarity: report_only | pivot | fail
+I2P_NOVELTY_ACTION=pivot
+# Max pivot attempts when similarity is high
+I2P_NOVELTY_MAX_PIVOTS=2
