--- a/i2p_config.example.json
+++ b/i2p_config.example.json
@@ -41,5 +41,17 @@
     "dir": "results",
     "mode": "link",
     "keep_log": true
+  },
+  "novelty": {
+    "__comment__": "Local novelty check against nodes_paper.json (ICLR 2025) + pivot on high similarity.",
+    "enable": true,
+    "top_k": 100,
+    "high_th": 0.88,
+    "medium_th": 0.82,
+    "index_dir": "Paper-KG-Pipeline/output/novelty_index",
+    "action": "pivot",
+    "max_pivots": 2,
+    "require_embedding": false,
+    "report_in_output": false
   }
 }
